--- a/nginx/conf.d/admin_ui.conf
+++ b/nginx/conf.d/admin_ui.conf
@@ -5,14 +5,25 @@ server {
     listen 443 ssl http2;
     server_name admin.citadel.local;
 
-    # TLS (use your own certs – Let's Encrypt is fine)
+    # ----- TLS (use Let’s Encrypt or your internal CA) -----
     ssl_certificate     /etc/nginx/certs/admin.crt;
     ssl_certificate_key /etc/nginx/certs/admin.key;
+    ssl_protocols       TLSv1.2 TLSv1.3;
+    ssl_ciphers         HIGH:!aNULL:!MD5;
+
+    # ----- Basic security headers -----
+    add_header X-Content-Type-Options nosniff;
+    add_header X-Frame-Options DENY;
+    add_header X-XSS-Protection "1; mode=block";
+
+    # ----- Rate limiting (20 req/s, burst 5) -----
+    limit_req_zone $binary_remote_addr zone=admin_api:10m rate=20r/s;
 
     # -------------------------------------------------
     # Serve the React SPA
     # -------------------------------------------------
     location / {
+        # All non‑API requests go to the SPA
         proxy_pass http://admin-frontend:80;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -20,19 +31,20 @@ server {
     }
 
     # -------------------------------------------------
-    # Proxy API calls to the FastAPI backend
+    # API proxy – protected by JWT / Okta
     # -------------------------------------------------
     location /api/ {
+        limit_req zone=admin_api burst=5 nodelay;
         proxy_pass http://admin-backend:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
-        # Forward the Authorization header (JWT) unchanged
+        # Preserve the Authorization header for JWT/OAuth2
         proxy_set_header Authorization $http_authorization;
     }
 
     # -------------------------------------------------
-    # Optional health‑check endpoint for the watchdog
+    # Health‑check endpoint for the watchdog
     # -------------------------------------------------
     location /health {
         proxy_pass http://admin-backend:8000/health;
