--- a/nginx/conf.d/grafana.conf
+++ b/nginx/conf.d/grafana.conf
@@ -7,15 +7,14 @@ server {
 
     ssl_certificate     /etc/nginx/certs/mc.crt;
     ssl_certificate_key /etc/nginx/certs/mc.key;
+    ssl_protocols       TLSv1.2 TLSv1.3;
+    ssl_ciphers         HIGH:!aNULL:!MD5;
 
+    # Forward everything to Grafana (it handles OAuth2)
     location / {
         proxy_pass http://grafana-private:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    location /health {
-        proxy_pass http://grafana-private:3000/api/health;
     }
 }
