Add volume mapping for citadel-bot service
Add volume mapping for heatmaps in citadel-bot service

--- a/docker‑compose.yml
+++ b/docker‑compose.yml
@@ -251,5 +251,8 @@ nginx-proxy:
   networks:
     - backend
   restart: unless-stopped
- 
+ citadel-bot:
+  ...
+  volumes:
+    - ./heatmaps:/tmp/heatmaps   # host folder ./heatmaps maps to container /tmp/heatmaps
  
