--- a/nginx/conf.d/admin_ui.conf
+++ b/nginx/conf.d/admin_ui.conf
@@ -50,3 +50,11 @@ server {
         proxy_pass http://admin-backend:8000/health;
     }
 }
+
+# inside admin_ui.conf (or a separate location block)
+location /heatmaps/ {
+    alias /opt/citadel/heatmaps/;   # path on the host
+    autoindex on;                   # optional directory listing
+    add_header Cache-Control "no-store";
+}
+ 
