--- a/requirements.txt
+++ b/requirements.txt
@@ -53,3 +53,24 @@ matplotlib>=3.8
 seaborn>=0.13
 
 # -------------------------------------------------
+
+# Production deps (already present)
+fastapi==0.110.*
+uvicorn[standard]==0.27.*
+python-jose[cryptography]==3.3.*
+pydantic==2.6.*
+docker==7.0.*
+prometheus-api-client==0.5.*
+PyYAML==6.0
+
+# ---- Testing & CI ----
+pytest==8.2.*
+pytest-cov==5.0.*
+pytest-asyncio==0.23.*
+ruff==0.6.*                # fast linter (replaces flake8)
+mypy==1.10.*
+bandit==1.7.*
+safety==3.2.*
+# For MT5 sandbox (if you have a Docker image that mimics MT5)
+docker-compose==1.29.*      # used by integration tests
+
