--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -296,5 +296,50 @@ deploy:
         docker compose pull admin-backend admin-frontend &&
         docker compose up -d --no-deps --build admin-backend admin-frontend'
 
+
+        name: Optimiser CI
+
+on:
+  push:
+    paths:
+      - 'optimiser/**'
+  pull_request:
+    paths:
+      - 'optimiser/**'
+
+jobs:
+  build-and-push:
+    runs-on: ubuntu-latest
+    env:
+      IMAGE_NAME: ghcr.io/${{ github.repository }}/optimiser
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up QEMU (multi‑arch builds)
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push optimiser image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./optimiser
+          push: true
+          tags: |
+            ${{ env.IMAGE_NAME }}:latest
+            ${{ env.IMAGE_NAME }}:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+
  
 
