--- a/alerts/alertmanager.yml
+++ b/alerts/alertmanager.yml
@@ -88,3 +88,48 @@ receivers:
           *Details:* {{ .Annotations.description }}
           *Value:* {{ .Value }}
           {{ end }}
+
+
+global:
+  resolve_timeout: 5m
+  # Default Slack webhook – can be overridden by env var
+  slack_api_url: '{{ env "SLACK_WEBHOOK_URL" }}'
+
+route:
+  receiver: slack-notifications
+  group_by: ['alertname', 'job']
+  group_wait: 30s
+  group_interval: 5m
+  repeat_interval: 1h
+
+  # Critical alerts also go to PagerDuty
+  routes:
+    - match:
+        severity: critical
+      receiver: pagerduty
+      continue: true   # also send to Slack
+
+receivers:
+  - name: slack-notifications
+    slack_configs:
+      - channel: '#trading-alerts'
+        send_resolved: true
+        title: "[{{ .Status }}] {{ .GroupLabels.alertname }}"
+        text: |
+          {{ range .Alerts }}
+          *Alert:* {{ .Annotations.summary }}
+          *Details:* {{ .Annotations.description }}
+          *Value:* {{ .Value }}
+          {{ end }}
+
+  - name: pagerduty
+    pagerduty_configs:
+      - service_key: '{{ env "PAGERDUTY_INTEGRATION_KEY" }}'
+        severity: '{{ .CommonLabels.severity }}'
+        send_resolved: true
+
+  - name: kill-switch
+    webhook_configs:
+      - url: 'http://bot-control:8000/api/v1/kill-switch'
+        send_resolved: false
+ 
