--- a/requirements.txt
+++ b/requirements.txt
@@ -78,3 +78,9 @@ numpy>=1.24
 pandas>=2.0
 matplotlib>=3.8   # optional – only needed for the plot flag
 
+# Existing deps …
+lightgbm==4.3.0          # latest stable at time of writing
+scikit-learn>=1.3.0      # for train_test_split, metrics, etc.
+joblib>=1.3.0            # for model persistence (optional)
+
+
