--- a/alerts/cqt_alerts.yml
+++ b/alerts/cqt_alerts.yml
@@ -154,4 +154,22 @@ groups:
           summary: "Macro‑event window active"
           description: "A high‑impact macro event is ongoing; trading is paused."
 
+groups:
+  - name: predictive-guard-alerts
+    rules:
+      - alert: HighLatencyGuard
+        expr: guard_latency_seconds > 0.15
+        for: 1m
+        labels:
+          severity: warning
+        annotations:
+          summary: "Latency guard exceeded 150 ms"
+          description: "The pre‑trade latency measurement is >150 ms for >1 min."
+
+      - alert: SpreadTooWide
+        expr: guard_spread_pips > 0.5
+        for: 30s
+        labels:
+          severity:
+
 
